# papernews

./: .coverage  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  fix_script.py  pyproject.toml  sources.smoke.toml  sources.toml  test.db  test_typ.py  test_typ.typ  test_typ_escaping.py
.github/workflows/: ci.yml
papernews/: __main__.py  adapter.py  ai_detect.py  archives.py  cache.py  cli.py  config.py  dedupe.py  extract.py  fetch.py  llm.py  mag.py  markdown_ir.py  models.py  preview.py  render.py  rewrite.py  select.py  serve.py  store.py  summarize.py  template.tex.j2  template.typ.j2  typst_emit.py  web.py  wiki.py
papernews/core/: backends.py  main.py  router.py
papernews/plugins/: academic_plugin.py  curiosity_plugin.py  entity_plugin.py  hn_plugin.py  hookspecs.py  mag_plugin.py  registry.py  rss_plugin.py  salience_plugin.py  wiki_plugin.py
scripts/: eval_ai_detect.py  train_ai_classifier.py
tests/: conftest.py  test_adapter.py  test_ai_detect.py  test_backends.py  test_cli.py  test_config.py  test_curiosity.py  test_dedupe.py  test_e2e_gauntlet.py  test_eink.py  test_entity.py  test_flow.py  test_hookspecs.py  test_ir.py  test_mag.py  test_models.py  test_pipeline.py  test_plugins.py  test_render.py  test_salience.py  test_serve.py  test_store.py  test_triage.py  test_web_features.py  test_wiki_plugin.py  utils.py
tests/fixtures/: test_db.json
