[project]
name = "papernews"
version = "0.1.0"
description = "Daily news aggregator → Typst PDF digest"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "feedparser>=6.0",
    "trafilatura>=1.12",
    "jinja2>=3.1",
    "flask>=3.0",
    "apscheduler>=3.10",
    "gunicorn>=21.2",
    "google-genai>=0.2.0",
    "httpx>=0.27",
    "typst>=0.11.0",
    "pillow>=12.2.0",
    "prefect>=3.7.5.dev5",
]

# LLM backend is selected via LLM_BACKEND env var ("gemini" or "ollama").


[project.scripts]
papernews = "papernews.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["papernews"]
