[project]
name = "papernews"
version = "0.1.0"
description = "Daily news aggregator → Typst PDF digest"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "feedparser>=6.0",
    "trafilatura>=1.12",
    "jinja2>=3.1",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "apscheduler>=3.10",
    "google-genai>=0.2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "typst>=0.11.0",
    "pillow>=12.2.0",
    "prefect>=3.7.5",
    "beautifulsoup4>=4.15.0",
]

[project.scripts]
papernews = "papernews.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["papernews"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pytest-xdist>=3.8.0",
    "hypothesis>=6.155.7",
    "httpx>=0.27", # FastAPI TestClient transport
    "ruff>=0.15.20",
    "pytest-cov>=7.1.0",
]

[tool.ruff]
# Enable Pyflakes (F), pycodestyle (E), isort (I), and pyupgrade (UP)
lint.select = ["E", "F", "I", "UP"]
lint.ignore = ["E501", "E402"]

[tool.mypy]
# Global options:
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["papernews.*"]
disallow_untyped_defs = true
